# TilVista

./: TilVista_v0.1.0.py  TilVista_v0.2.0.py  TilVista_v0.4.0.py  TilVista_v0.5.10.py
TilVista/: CMakeLists.txt  README.md  SetupQt.cmake
TilVista/resources/: resources.qrc
TilVista/src/: main.cpp
TilVista/src/core/: config.cpp  config.h  pathutils.cpp  pathutils.h
TilVista/src/ui/: aleavuetab.cpp  aleavuetab.h  dirbar.cpp  dirbar.h  dirdatabasepanel.cpp  dirdatabasepanel.h  madolodostab.cpp  madolodostab.h  mainwindow.cpp  mainwindow.h  previewlabel.cpp  previewlabel.h  reviewdbpanel.cpp  reviewdbpanel.h  sattumapictab.cpp  sattumapictab.h  shortcutstab.cpp  shortcutstab.h  shujukopanel.cpp  shujukopanel.h  slideshowwindow.cpp  slideshowwindow.h  videopreviewwidget.cpp  videopreviewwidget.h
TilVista/src/workers/: catalogueworkers.cpp  catalogueworkers.h  dbworkers.cpp  dbworkers.h  scanworker.cpp  scanworker.h  videoframesworker.cpp  videoframesworker.h
TilVista_cpp/resources/: resources.qrc
TilVista_cpp/src/: main.cpp
TilVista_cpp/src/ui/: aleavuetab.h  dirbar.cpp  dirbar.h  dirdatabasepanel.h  mainwindow.h  previewlabel.cpp  sattumapictab.cpp  sattumapictab.h  slideshowwindow.h  videopreviewwidget.cpp  videopreviewwidget.h
TilVista_cpp/src/workers/: catalogueworkers.cpp  catalogueworkers.h  dbworkers.cpp  videoframesworker.h
